# poi_cli

./: Cargo.toml  poi.yaml  result.csv
examples/: parse_csv.rs
fixtures/: resident.xlsx  resident_city.csv  resident_county.csv  test.yaml
src/: cli.rs  lib.rs  utils.rs
src/config/: geo_coding.rs  mod.rs  response_profile.rs
