[package]
name = "poi_cli"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "geo_coding"
path = "src/bin/geo_coding.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
atty = "0.2.14"
clap = { version = "4.2.2", features = ["derive"] }
console = "0.15.5"
csv = "1.2.1"
http-serde = "1.1.2"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.21.0", default-features = false }
serde = {version = "1.0.160"}
serde_json = "1.0.96"
serde_json_lodash = "0.1.16"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.21"
tokio = { version = "1.27.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
